# insurance-ollama-rag

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: interactive.py
src/insurance_rag/: __init__.py  config.py  document_loader.py  llm_analyzer.py  models.py  rag_pipeline.py  retriever.py  vectorstore.py
src/insurance_rag/app/: app.py
src/insurance_rag/app/static/: script.js  style.css
src/insurance_rag/app/templates/: index.html
tests/: test_history.py  test_rag.py
