[tool.poetry]
name = "insurance-ollama-rag"
version = "0.1.0"
description = "RAG system for insurance policy document analysis using local Ollama"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "insurance_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-community = "^0.0.20"
chromadb = "^0.4.22"
pypdf = "^4.0.0"
sentence-transformers = "^2.3.0"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
ollama = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true